# hubspot-mcp-server

./: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: manual-verification.md
src/hubspot_mcp/: __init__.py  __main__.py  client.py  server.py  settings.py
tests/: test_client.py  test_server.py  test_settings.py
tests/integration/: fake_hubspot_api.py  gate_entry.py  test_stdio_roundtrip.py
