[project]
name = "hubspot-mcp"
version = "0.1.0"
description = "Production-grade, read-only MCP server for HubSpot CRM"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
]

[project.urls]
Homepage = "https://github.com/inogen-ai/hubspot-mcp-server"
Repository = "https://github.com/inogen-ai/hubspot-mcp-server"
Issues = "https://github.com/inogen-ai/hubspot-mcp-server/issues"

[project.scripts]
hubspot-mcp-server = "hubspot_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hubspot_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
